tests/error/divideInteger-unit-wrong-1st-argument.uplc
(program 1.0.0[[(builtin divideInteger)(con unit ())](con integer 10)])